--- a/css/tinyset.css
+++ b/css/tinyset.css
@@ -116,14 +116,9 @@ i, em, .italic {
     flex-direction: column;
 }
 
-.inline-block-top {
+.inline-block {
     display: inline-block;
     vertical-align: top;
-}
-
-.inline-block-middle {
-    display: inline-block;
-    vertical-align: middle;
 }
 
 .hide { display: none }
@@ -306,7 +301,17 @@ i, em, .italic {
 .h6 { height: 8rem   }
 
 
-/* Dim + Dim Color */
+/* Border Radius */
+
+.br1 { border-radius: .125rem  }
+.br2 { border-radius: .1875rem }
+.br3 { border-radius: .25rem   }
+.br4 { border-radius: .5rem    }
+.br5 { border-radius: 1rem     }
+.br6 { border-radius: 2rem     }
+
+
+/* Dim */
 
 .dim { opacity: .5; transition: opacity 0.2s ease }
 .dim:hover { opacity: .8 }
@@ -316,6 +321,12 @@ i, em, .italic {
 
 .dim-color-black { color: rgba(0,0,0,0.5); transition: color .2s ease }
 .dim-color-black:hover { color: rgba(0,0,0,.8) }
+
+.dim-bg-white { background-color: rgba(255,255,255,.08); transition: background-color .2s ease }
+.dim-bg-white:hover { background-color: rgba(255,255,255,.16) }
+
+.dim-bg-black { background-color: rgba(0,0,0,0.08); transition: background-color .2s ease }
+.dim-bg-black:hover { background-color: rgba(0,0,0,.16) }
 
 
 /* Interactions  */
