Lot of progress. Still a lot to do.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,6 +6,10 @@
     </svg>
   </a>
 
+  <a class="title center-block color-white font-size-1 font-weight-4 line-height-title lowercase underline-none" href="{{ site.baseurl }}/">
+  {{ site.title }}
+  </a>
+
   {% include nav.html %}
 
 </footer>
