--- a/_sass/_tinyset.scss
+++ b/_sass/_tinyset.scss
@@ -18,7 +18,6 @@ body {
 
 img, svg {
     max-width: 100%;
-    max-height: 100%;
     height: auto;
 }
 
@@ -68,7 +67,7 @@ i, em, .italic {
 .uppercase { text-transform: uppercase }
 
 .line-height-none { line-height: 1 }
-.line-height-title { line-height: 1.5 }
+.line-height { line-height: 1.5 }
 .line-height-default { line-height: 1.75 }
 
 .font-size-1 { font-size: 2rem    }
@@ -91,9 +90,10 @@ i, em, .italic {
 .font-weight-9 { font-weight: 900 }
 
 .tracking-tight  { letter-spacing: -.0625em }
-.tracking-normal { letter-spacing: normal }
-.tracking-wide   { letter-spacing:  .125em }
-.tracking-super   { letter-spacing: .25em }
+.tracking-normal { letter-spacing: normal   }
+.tracking-slight { letter-spacing: .0625em  }
+.tracking-wide   { letter-spacing: .125em   }
+.tracking-super  { letter-spacing: .25em    }
 
 .underline-none { text-decoration: none }
 
@@ -129,6 +129,11 @@ i, em, .italic {
 .inline-block {
     display: inline-block;
     vertical-align: top;
+}
+
+.inline-block-middle {
+    display: inline-block;
+    vertical-align: middle;
 }
 
 .hide { display: none }
@@ -334,6 +339,16 @@ i, em, .italic {
 .opacity-8 { opacity: 0.9 }
 
 
+/* Shadows */
+.text-shadow-light  { text-shadow: 0 1px 2px rgba(0, 0, 0, .3) }
+.text-shadow-medium { text-shadow: 0 1px 4px rgba(0, 0, 0, .4) }
+.text-shadow-dark   { text-shadow: 0 1px 6px rgba(0, 0, 0, .5) }
+
+.box-shadow-light   { box-shadow: 0 1px 1px rgba(0, 0, 0, .2)  }
+.box-shadow-medium  { box-shadow: 0 1px 2px rgba(0, 0, 0, .3)  }
+.box-shadow-dark    { box-shadow: 0 1px 3px rgba(0, 0, 0, .4)  }
+
+
 /* Hover Dim */
 
 .dim { opacity: .5; transition: opacity 0.2s ease }
@@ -396,6 +411,9 @@ i, em, .italic {
         flex-direction: column;
     }
 
+    .sm-left { float: left }
+    .sm-right { float: right }
+
     .sm-hide { display: none !important }
     .sm-show { display: inherit !important }
 
@@ -424,6 +442,9 @@ i, em, .italic {
         justify-content: center;
         flex-direction: column;
     }
+
+    .lg-left { float: left }
+    .lg-right { float: right }
 
     .lg-hide { display: none !important }
     .lg-show { display: inherit !important }
