--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,7 +6,7 @@ layout: default
   {% include nav.html %}
 
   <article class="lg-article lg-height-full lg-align-middle p3">
-    <section class="center-block" style="max-width: 34rem" >
+    <section class="lg-section center-block" style="max-width: 34rem">
 
     <h1 class="font-size-2">{{ page.title }}</h1>
     <div class="post-content">
