--- a/_sass/_tinyset.scss
+++ b/_sass/_tinyset.scss
@@ -9,6 +9,8 @@
 html {
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
+    -webkit-font-smoothing: subpixel-antialiased;
+    text-rendering: optimizeLegibility;
     box-sizing: border-box;
 }
 
