--- a/_sass/_tinyset.scss
+++ b/_sass/_tinyset.scss
@@ -69,7 +69,7 @@ i, em, .italic {
 .uppercase { text-transform: uppercase }
 
 .line-height-none { line-height: 1 }
-.line-height { line-height: 1.5 }
+.line-height-title { line-height: 1.5 }
 .line-height-default { line-height: 1.75 }
 
 .font-size-1 { font-size: 2rem    }
