Use localStorage to help UX depending on what page they're coming from

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -19,3 +19,12 @@ layout: default
   {% include header.html %}
 
 </div>
+
+
+<script>
+
+  console.log("from = " + localStorage.getItem("via"));
+  localStorage.setItem("via", "page");
+  console.log("on = " + localStorage.getItem("via"));
+  
+</script>
