Return false pls

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -5,7 +5,7 @@ layout: default
 <a href="{{ site.baseurl }}/" class="lg-fixed sm-hide inline-block color-gray dim-bg-black underline-none lowercase py1 px3 m3 br3">&larr; All Work</a>
 
 <div id="close-post" class="align-right hide">
-  <a href="{{ site.baseurl }}/" onclick="window.history.back()" class="lg-fixed inline-block line-height-none dim-color-black yunderline-none p3 m1 t0 r0">
+  <a href="{{ site.baseurl }}/" onclick="window.history.back(); return false;" class="lg-fixed inline-block line-height-none dim-color-black yunderline-none p3 m1 t0 r0">
       <svg viewBox="0 0 32 32" width="32" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="6%">
           <title>All Work</title>
           <path d="M2 30 L30 2 M30 30 L2 2" />
