--- a/_sass/_tinyset.scss
+++ b/_sass/_tinyset.scss
@@ -372,10 +372,7 @@ i, em, .italic {
 
 /* Interactions  */
 
-.clickable:active {
-    top: 1px;
-    position: relative;
-}
+.pointer { cursor: pointer }
 
 .noselect {
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
