--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,12 +5,12 @@ layout: default
 <a href="{{ site.baseurl }}/articles/" class="lg-fixed sm-hide inline-block color-gray dim-bg-black underline-none lowercase py1 px3 m3 br3">&larr; All Articles</a>
 
 <div id="close-post" class="align-right hide">
-  <a href="{{ site.baseurl }}/articles/" onclick="window.history.back(); return false;" class="lg-fixed inline-block line-height-none dim-color-black yunderline-none p3 m1 t0 r0">
+  <div onclick="window.history.back()" class="lg-fixed inline-block line-height-none dim-color-black yunderline-none p3 m1 t0 r0 pointer">
       <svg viewBox="0 0 32 32" width="32" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="6%">
           <title>All Articles</title>
           <path d="M2 30 L30 2 M30 30 L2 2" />
       </svg>
-  </a>
+  </div>
 </div>
 
 <article class="lg-post lg-height-full lg-align-middle px4 py4" itemscope itemtype="http://schema.org/BlogPosting">
