Use sessionStorage instead of localStorage

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -23,8 +23,8 @@ layout: default
 
 <script>
 
-  console.log("from = " + localStorage.getItem("via"));
-  localStorage.setItem("via", "page");
-  console.log("on = " + localStorage.getItem("via"));
+  console.log("from = " + sessionStorage.getItem("via"));
+  sessionStorage.setItem("via", "page");
+  console.log("on = " + sessionStorage.getItem("via"));
   
 </script>
