Added header styles to project pages

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -16,9 +16,12 @@ layout: default
 <article class="lg-post lg-height-full lg-align-middle px4 py4" itemscope itemtype="http://schema.org/BlogPosting">
   <section class="lg-section center-block" style="max-width: 34rem" >
 
-      <header class="post-header">
-        <h1 class="post-title font-size-2" itemprop="name headline">{{ page.title }}</h1>
-        <p class="post-meta"><time>{{ page.year }}</time></p>
+      <header class="relative center-block align-center color-white line-height-none text-shadow-medium overflow-hidden py4 px3 br3"  style="background-color: {{ page.color }}">
+        <h1 class="relative z2 post-title font-size-2" itemprop="name headline">{{ page.title }}</h1>
+        <p class="relative z2 post-meta"><time>{{ page.year }}</time></p>
+        <h3 class="relative z2 font-size-5 line-height-title tracking-slight font-weight-5">{{ page.tagline }}</h3>
+
+        <div class="absolute z1 t0 l0 width-full opacity-1" style="height: 100%; background-color: {{ page.color }}; background-image: url({{ page.hero-image }}); background-size: cover; background-position: center center;"></div>
       </header>
 
       <div class="post-content" itemprop="articleBody">
