Use RGB for more control allowing for RGBA

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -16,7 +16,7 @@ layout: default
 <article class="lg-post lg-height-full lg-align-middle px4 py4" itemscope itemtype="http://schema.org/BlogPosting">
   <section class="lg-section center-block" style="max-width: 34rem" >
 
-      <header class="relative center-block align-center color-white line-height-none text-shadow-medium overflow-hidden py4 px3 br3"  style="background-color: {{ page.color }}">
+      <header class="relative center-block align-center color-white line-height-none text-shadow-medium overflow-hidden py4 px3 br3"  style="background-color: rgb({{ page.color }})">
         <h1 class="relative z2 post-title font-size-2" itemprop="name headline">{{ page.title }}</h1>
         <p class="relative z2 post-meta"><time>{{ page.year }}</time></p>
         <h3 class="relative z2 font-size-5 line-height-title tracking-slight font-weight-5">{{ page.tagline }}</h3>
