--- a/_sass/_tinyset.scss
+++ b/_sass/_tinyset.scss
@@ -354,19 +354,19 @@ i, em, .italic {
 
 /* Hover Dim */
 
-.dim { opacity: .5; transition: opacity 0.2s ease }
+.dim { opacity: .5; transition: opacity .2s ease }
 .dim:hover { opacity: .8 }
 
-.dim-color-white { color: rgba(255,255,255,.5); transition: color .2s ease }
-.dim-color-white:hover { color: rgba(255,255,255,.8) }
+.dim-color-white { color: rgba(255,255,255,.8); transition: color .2s ease }
+.dim-color-white:hover { color: rgba(255,255,255,1) }
 
-.dim-color-black { color: rgba(0,0,0,0.5); transition: color .2s ease }
-.dim-color-black:hover { color: rgba(0,0,0,.8) }
+.dim-color-black { color: rgba(0,0,0,.8); transition: color .2s ease }
+.dim-color-black:hover { color: rgba(0,0,0,1) }
 
 .dim-bg-white { background-color: rgba(255,255,255,.06); transition: background-color .2s ease }
 .dim-bg-white:hover { background-color: rgba(255,255,255,.10) }
 
-.dim-bg-black { background-color: rgba(0,0,0,0.08); transition: background-color .2s ease }
+.dim-bg-black { background-color: rgba(0,0,0,.08); transition: background-color .2s ease }
 .dim-bg-black:hover { background-color: rgba(0,0,0,.12) }
 
 
