Use dim-color on X

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -7,7 +7,7 @@ layout: default
 
       <a href="{{ site.baseurl }}/" class="lg-absolute l1 t1 sm-hide inline-block color-white dim-bg-black underline-none lowercase py1 px3 m2 br3">&larr; All Work</a>
 
-      <div onclick="window.history.back()" id="close-post" class="fixed t0 r0 hide inline-block line-height-none color-white p3 pointer">
+      <div onclick="window.history.back()" id="close-post" class="fixed t0 r0 hide inline-block line-height-none dim-color-white p3 pointer">
           <svg viewBox="0 0 32 32" width="24" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="8%">
               <title>All Work</title>
               <path d="M2 30 L30 2 M30 30 L2 2" />
