Medium shadow on text pls!

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -14,7 +14,7 @@ layout: default
           </svg>
       </div>
 
-      <div class="center-block text-shadow-light pt3">
+      <div class="center-block text-shadow-medium pt3">
         <h2 class="font-size-1">{{ page.title }}</h2>
         <time class="block font-size-6 line-height-none tracking-wide opacity-8 py2">{{ page.year }}</time>
         <span class="font-size-5 line-height-title tracking-slight font-weight-5">{{ page.tagline }}</span>
