More style tweaks

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <article class="lg-post lg-height-full" itemscope itemtype="http://schema.org/BlogPosting">
 
-  <header class="align-center color-white pt4 px3 pb4" style="background: linear-gradient( rgba({{ page.color }}, 0.92), rgba({{ page.color }}, 0.92)), url({{ page.hero-image }}); background-size: cover; background-position: center center;">
+  <header class="align-center color-white pt4 px3 pb4" style="background: linear-gradient( rgba({{ page.color }}, 0.94), rgba({{ page.color }}, 0.94)), url({{ page.hero-image }}); background-size: cover; background-position: center center;">
 
       <a href="{{ site.baseurl }}/" class="lg-absolute l1 t1 sm-hide inline-block color-white dim-bg-black underline-none lowercase py1 px3 m2 br3">&larr; All Work</a>
 
@@ -14,9 +14,9 @@ layout: default
           </svg>
       </div>
 
-      <div class="center-block text-shadow-medium pt3">
+      <div class="center-block line-height-none text-shadow-medium pt3">
         <h2 class="font-size-1">{{ page.title }}</h2>
-        <time class="block font-size-6 line-height-none tracking-wide opacity-8 py2">{{ page.year }}</time>
+        <time class="block font-size-6 tracking-wide opacity-8 py2">{{ page.year }}</time>
         <span class="font-size-5 line-height-title tracking-slight font-weight-5">{{ page.tagline }}</span>
       </div>
 
