Remove selection on cover images

--- a/_sass/_tinyset.scss
+++ b/_sass/_tinyset.scss
@@ -374,7 +374,7 @@ i, em, .italic {
 
 .pointer { cursor: pointer }
 
-.noselect {
+.no-select {
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     -webkit-touch-callout: none;
     -webkit-user-select: none;
