Fix Title size and bottom spacing on all pages

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,10 +5,10 @@ layout: default
 
   {% include nav.html %}
 
-  <article class="lg-article lg-height-full lg-align-middle p3">
+  <article class="lg-article lg-height-full lg-align-middle pt3 px3 pb5">
     <section class="lg-section center-block" style="max-width: 34rem">
 
-    <h1 class="font-size-2">{{ page.title }}</h1>
+    <h1 class="font-size-1">{{ page.title }}</h1>
     <div class="post-content">
         {{ content }}
     </div>
