--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <article class="lg-post lg-height-full" itemscope itemtype="http://schema.org/BlogPosting">
 
-  <header class="align-center color-white px3 pt5 pb4" style="background: linear-gradient( rgba({{ page.color }}, 0.85), rgba({{ page.color }}, 0.85)), url({{ page.cover-image }}); background-size: cover; background-position: center center;">
+  <header class="align-center color-white px3 pt5 pb4" style="background: linear-gradient( rgba({{ page.color }}, 0.8), rgba({{ page.color }}, 0.8)), url({{ page.cover-image }}); background-size: cover; background-position: center center;">
 
       <a href="{{ site.baseurl }}/articles/" class="lg-absolute l1 t1 sm-hide inline-block color-white dim-bg-white underline-none lowercase py1 px3 m2 br3">&larr; All Articles</a>
 
@@ -22,7 +22,7 @@ layout: default
 
   </header>
 
-  <section class="center-block pt3 px3 pb5" style="max-width: 34rem">
+  <section class="lg-section center-block pt3 px3 pb5" style="max-width: 34rem">
 
     <div class="post-content" itemprop="articleBody">
       {{ content }}
