--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -22,7 +22,7 @@ layout: default
 
   </header>
 
-  <section class="center-block p3" style="max-width: 34rem">
+  <section class="lg-section center-block pt3 px3 pb5" style="max-width: 34rem">
 
     <div class="post-content" itemprop="articleBody">
       {{ content }}
