Add page-type identifier class to each template

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<article class="lg-post lg-height-full" itemscope itemtype="http://schema.org/BlogPosting">
+<article class="site-post lg-post lg-height-full" itemscope itemtype="http://schema.org/BlogPosting">
 
   <header class="align-center color-white px3 pt5 pb4" style="background: linear-gradient( rgba({{ page.color }}, 0.8), rgba({{ page.color }}, 0.8)), url({{ page.cover-image }}); background-size: cover; background-position: center center;">
 
