--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div class="lg-page lg-height-full">
+<div class="site-page lg-page lg-height-full">
 
   {% include nav.html %}
 
